--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,28 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- spring AMQP -->
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-amqp</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+
+        <!-- rabbitmq -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
+
+
         <!-- spring security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
